# FOpS-File-Operation-System

./: CMakeLists.txt  main.c  master_header.h
headers/: alloc.h  args.h  data.h  error.h  file.h  structs.h
source/alloc/: alloc.c
source/args/: args.c  args_functions.c
source/data/: data.c  file.c
source/error/: debug.c  error.c
